Activitys para start, login, sign in y menu principal.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="AppleGreen">#6eaa16</color>
     <color name="officeGreen">#007200</color>
+    <color name="PakistanGreen">#104911</color>
+    <color name="BlackOlive">#333d29</color>
 </resources>
