--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="60dp"
         android:backgroundTint="@color/officeGreen"
         android:foregroundTint="@color/white"
-        android:text="@string/EmpezarApp"
+        android:text="@string/btnempezarApp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
