Modificaciones en el Manifest.

--- a/app/src/main/res/layout/activity_ficha_tecnica_fauna.xml
+++ b/app/src/main/res/layout/activity_ficha_tecnica_fauna.xml
@@ -147,7 +147,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="272dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvNombreComun"
+        android:text="@string/tvNombre"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
@@ -170,7 +170,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/spinnerEstadoConservacion"
-        app:layout_constraintHorizontal_bias="0.674"
+        app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView05"
         app:layout_constraintVertical_bias="0.0" />
@@ -180,14 +180,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvFruto"
+        android:text="@string/tvHabitat"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtHabitat"
-        app:layout_constraintHorizontal_bias="0.245"
+        app:layout_constraintHorizontal_bias="0.323"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView04" />
 
@@ -198,7 +198,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvNombreCientifico"
+        android:text="@string/tvClasificacion"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
@@ -212,30 +212,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvTipoPLanta"
+        android:text="@string/tvTamanioo"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtTamanio"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintHorizontal_bias="0.539"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView02" />
 
     <TextView
         android:id="@+id/textView04"
-        android:layout_width="47dp"
-        android:layout_height="wrap_content"
+        android:layout_width="77dp"
+        android:layout_height="19dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvAltura"
+        android:text="@string/tvPeso"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtPeso"
-        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView03" />
 
