--- a/app/src/main/res/layout/activity_ficha_tecnica_flora.xml
+++ b/app/src/main/res/layout/activity_ficha_tecnica_flora.xml
@@ -149,12 +149,12 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="276dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvNombre"
+        android:text="@string/tvNombreComun"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtNombreComun"
-        app:layout_constraintHorizontal_bias="0.278"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -184,12 +184,12 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvHabitat"
+        android:text="@string/tvFruto"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtFruto"
-        app:layout_constraintHorizontal_bias="0.266"
+        app:layout_constraintHorizontal_bias="0.237"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView04" />
 
@@ -198,9 +198,9 @@
         android:layout_width="109dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvClasificacion"
+        android:text="@string/tvNombreCientifico"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
@@ -214,9 +214,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvTamanioo"
+        android:text="@string/tvTipoPLanta"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
@@ -232,12 +232,12 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/tvPeso"
+        android:text="@string/tvAltura"
         android:textAlignment="viewStart"
         android:textColor="@color/BlackOlive"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/txtAltura"
-        app:layout_constraintHorizontal_bias="0.353"
+        app:layout_constraintHorizontal_bias="0.247"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView03" />
 
