--- a/app/src/main/res/layout/activity_mostrar_registros_flora.xml
+++ b/app/src/main/res/layout/activity_mostrar_registros_flora.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MostrarRegistrosActivity"
+    tools:context=".MostrarRegistrosFloraActivity"
     android:background="@drawable/bgnuevoregistro">
 
     <View
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
         android:foregroundTint="@color/white"
-        android:text="@string/tituloVerRegistros"
+        android:text="@string/tituloVerRegistrosFlora"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="34sp"
@@ -78,7 +78,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.33" />
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaFlora"
+        android:layout_width="326dp"
+        android:layout_height="421dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.741" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
