--- a/app/src/main/res/layout/activity_mostrar_registros_carac_entorno.xml
+++ b/app/src/main/res/layout/activity_mostrar_registros_carac_entorno.xml
@@ -78,4 +78,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.33" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaCaracteristicaEntorno"
+        android:layout_width="326dp"
+        android:layout_height="421dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.741" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
